--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "nodemailer": "^6.9.3"
   },
